<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize">

            <include
                layout="@layout/makaan_toolbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:queryHint="search property"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:transitionName="search" />
        </android.support.v7.widget.Toolbar>

        <!--<RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_home_find_joy_image_view_top_margin">

            <ImageView
                android:layout_width="@dimen/activity_home_find_joy_image_view_width"
                android:layout_height="@dimen/activity_home_find_joy_image_view_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/joy"
                android:clickable="false" />

            <com.makaan.ui.view.FontTextView
                android:id="@+id/tv_joy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="14dp"
                android:text="find joy"
                android:textColor="@color/white"
                android:textSize="38sp"
                app:fontName="comfortaa-bold.ttf" />

            <com.makaan.ui.view.FontTextView
                android:id="@+id/tv_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tv_joy"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:text="with"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:typeface="sans"
                app:fontName="comforta.ttf" />

            <com.makaan.ui.view.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_joy"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="-5dp"
                android:layout_toEndOf="@id/tv_with"
                android:layout_toRightOf="@id/tv_with"
                android:text="makaan"
                android:textColor="@color/white"
                android:textSize="38sp"
                app:fontName="comforta.ttf" />
        </RelativeLayout>
-->
        <RelativeLayout
            android:id="@+id/rl_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_home_search_relative_view_bottom_margin"
            android:layout_marginLeft="@dimen/activity_home_search_toggle_left_margin"
            android:layout_marginStart="@dimen/activity_home_search_toggle_left_margin"
            android:layout_marginEnd="@dimen/activity_home_search_toggle_left_margin">

            <RelativeLayout
                android:id="@+id/activity_home_search_relative_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_home_search_text_view_height"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/activity_home_search_relative_view_left_margin"
                android:layout_marginStart="@dimen/activity_home_search_relative_view_left_margin"
                android:clipChildren="false"
                android:background="@drawable/home_search_background">

                <ImageView
                    android:id="@+id/activity_home_search_image_view"
                    android:layout_width="@dimen/activity_home_search_icon_width"
                    android:layout_height="@dimen/activity_home_search_icon_height"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_home_search_icon_margin_left"
                    android:layout_marginStart="@dimen/activity_home_search_icon_margin_left"
                    android:scaleType="centerCrop"
                    android:src="@drawable/search_icon" />

                <TextView
                    android:id="@+id/activity_home_search_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_home_search_text_margin_left"
                    android:layout_marginStart="@dimen/activity_home_search_text_margin_left"
                    android:layout_toEndOf="@id/activity_home_search_image_view"
                    android:layout_toRightOf="@id/activity_home_search_image_view"
                    android:hint="@string/search_by_location"
                    android:textColor="@color/listingBlack"
                    android:textColorHint="@color/listingBlack"
                    android:textSize="@dimen/activity_home_search_text_text_size"
                    android:typeface="sans" />

                <View
                    android:id="@+id/activity_home_blinking_view"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/activity_home_empty_view_margin_top"
                    android:layout_marginLeft="@dimen/activity_home_empty_view_margin_start"
                    android:layout_marginStart="@dimen/activity_home_empty_view_margin_start"
                    android:layout_marginTop="@dimen/activity_home_empty_view_margin_top"
                    android:layout_toEndOf="@id/activity_home_search_text_view"
                    android:layout_toRightOf="@id/activity_home_search_text_view"
                    android:background="@drawable/search_view_red_cursor" />
            </RelativeLayout>

            <RadioGroup
                android:id="@+id/activity_home_property_type_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/buy_rent_radio_group_home_total_height"
                android:clipChildren="false"
                android:gravity="center_vertical"
                android:layout_above="@id/activity_home_search_relative_view"
                android:layout_marginBottom="@dimen/buy_rent_radio_group_home_margin_bottom"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/activity_home_property_buy_radio_button"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/buy_radio_button_background_selector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="buy"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <RadioButton
                    android:id="@+id/activity_home_property_rent_radio_button"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="@dimen/rent_button_home_margin_top"
                    android:background="@drawable/rent_radio_button_background_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="rent"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="sans" />
            </RadioGroup>
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>