...
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/search_white"
                android:scaleType="centerCrop"/>

            <EditText
                android:id="@+id/activity_search_base_layout_search_bar_search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_search_base_layout_search_bar_search_text_view_margin_left"
                android:layout_marginStart="@dimen/activity_search_base_layout_search_bar_search_text_view_margin_left"
                android:layout_marginTop="@dimen/activity_search_base_layout_search_bar_search_text_view_margin_top"
                android:textColor="@color/white"
...
